--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,9 +1,15 @@
 <div class="field">
   <label>{{label}}</label>
-  <input [formControl]="control" [type]="inputType">
+  <input *ngIf="controlType === 'input'" [formControl]="control" [type]="inputType">
+
+  <textarea *ngIf="controlType === 'textarea'" [formControl]="control"></textarea>
+
   <div *ngIf="showErrors()" class="ui pointing red basic label">
     <p *ngIf="control.errors.required">
       Value is required
+    </p>
+    <p *ngIf="control.errors.email">
+      Entered Valid Email
     </p>
     <p *ngIf="control.errors.minlength">
       Value entred is
@@ -29,7 +35,7 @@
       Username is taken
     </p>
     <p *ngIf="control.errors.noConnection">
-     can't tell is username is taken
+      can't tell is username is taken
     </p>
   </div>
 </div>
